# FASTAPI

./: Dockerfile
Fast API/: .gitignore  dockerfile  requirements.txt
Fast API/app/: main.py  openmeteo_client.py  utils.py
Fast API/models/: feature_columns_regression.joblib  logistic_regression_rain.pkl  xgboost_regression_precip.pkl
app/: openmeteo_client.py  utils.py
at2/: Executive_Summary_Report.md  README.md  pyproject.toml
at2/.github/workflows/: ci.yml
at2/nba_draft_utils/: __init__.py
at2/tests/: __init__.py  test_data_processor.py  test_feature_engineer.py  test_model_evaluator.py
models/: feature_columns_classification.joblib  linear_regression_precip.pkl
nba-draft-package/: pyproject.toml
nba-draft-package/nba_draft_utils/: data_processor.py  feature_engineer.py  model_evaluator.py
