[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nba-draft-utils"
version = "0.1.0"
description = "Utilities package for NBA draft prediction"
readme = "README.md"
authors = [{ name = "Apaar Agarwal", email = "apaar@example.com" }]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",  # 1.4+ supports Python 3.12 reliably
]

[tool.setuptools]
# you are using a "flat" layout (package folder at repo root)
packages = ["nba_draft_utils"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
