[tool.poetry]
name = "nba-draft-utils"
version = "0.1.0"
description = "Utilities package for NBA draft prediction"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "nba_draft_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
